<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mryvind.crazytalk.Crazytalk"
    tools:showIn="@layout/activity_crazytalk">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bill_text_view"
        android:textSize="20dp"
        android:id="@+id/BilltextView"
        android:layout_alignParentTop="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BilleditText"
        android:layout_alignTop="@+id/BilltextView"
        android:layout_toRightOf="@+id/BilltextView"
        android:layout_toEndOf="@+id/BilltextView"
        android:ems="5"
        android:layout_marginLeft="15dp"
        android:text="@string/bill_edit_text"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_text_view"
        android:id="@+id/TiptextView"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/BilleditText"
        android:layout_alignBottom="@+id/BilleditText"
        android:textSize="20dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:id="@+id/TipeditText"
        android:layout_alignBottom="@+id/TiptextView"
        android:layout_toRightOf="@+id/TiptextView"
        android:ems="5"
        android:inputType="numberDecimal"
        android:text="@string/tip_edit_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_text_view"
        android:id="@+id/FinalBilltextView"
        android:textSize="20dp"
        android:layout_alignBottom="@+id/FinalBilleditText"
        android:layout_toRightOf="@+id/BilleditText"
        android:layout_toEndOf="@+id/BilleditText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:id="@+id/FinalBilleditText"
        android:ems="5"
        android:layout_below="@+id/TipeditText"
        android:layout_toRightOf="@+id/FinalBilltextView"
        android:layout_toEndOf="@+id/FinalBilltextView"
        android:text="@string/final_bill_edit_text"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_tip_text_view"
        android:id="@+id/ChangetiptextView"
        android:layout_alignTop="@+id/FinalBilltextView"
        android:layout_alignLeft="@+id/BilltextView"
        android:layout_alignStart="@+id/BilltextView"
        android:textSize="20sp"/>

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_alignRight="@+id/BilleditText"
        android:layout_alignEnd="@+id/BilleditText"
        android:layout_alignBottom="@+id/FinalBilltextView"
        android:layout_alignTop="@+id/FinalBilltextView"
        android:layout_toRightOf="@+id/ChangetiptextView"
        android:layout_toEndOf="@+id/ChangetiptextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_text_view"
        android:id="@+id/IntrotextView"
        android:layout_below="@+id/ChangetiptextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:textSize="20dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_friendly_text_view"
        android:id="@+id/friendlycheckBox"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/IntrotextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_opinion_text_view"
        android:id="@+id/opinioncheckBox"
        android:layout_alignTop="@+id/friendlycheckBox"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_special_text_view"
        android:id="@+id/SpecialscheckBox"
        android:layout_alignTop="@+id/opinioncheckBox"
        android:layout_alignRight="@+id/FinalBilleditText"
        android:layout_alignEnd="@+id/FinalBilleditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/available_text_view"
        android:id="@+id/textView"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/availableRadioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available_bad_radio_button"
            android:id="@+id/availableBadRadio" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available_ok_radio_button"
            android:id="@+id/availableOkRadio" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available_good_radio_button"
            android:id="@+id/availableGoodRadio" />
    </RadioGroup>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/problemSpinner"
        android:layout_below="@+id/availableRadioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:entries="@array/problem_solving"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_wait_text_view"
        android:id="@+id/timeWaitingtextView"
        android:layout_below="@+id/problemSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20dp"/>

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeWaitingchronometer"
        android:layout_alignBottom="@+id/timeWaitingtextView"
        android:layout_toRightOf="@+id/timeWaitingtextView"
        android:layout_toEndOf="@+id/timeWaitingtextView"
        android:layout_marginLeft="20dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_chronometer_button"
        android:id="@+id/StartButton"
        android:layout_below="@+id/timeWaitingtextView"
        android:layout_toLeftOf="@+id/opinioncheckBox"
        android:layout_toStartOf="@+id/opinioncheckBox"
        android:layout_marginTop="10dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause_chronometer_button"
        android:id="@+id/pauseButton"
        android:layout_alignTop="@+id/StartButton"
        android:layout_toRightOf="@+id/StartButton"
        android:layout_toEndOf="@+id/StartButton" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_chronometer_button"
        android:id="@+id/resetButton"
        android:layout_alignTop="@+id/pauseButton"
        android:layout_toRightOf="@+id/pauseButton"
        android:layout_toEndOf="@+id/pauseButton"
        android:layout_alignBottom="@+id/pauseButton" />


</RelativeLayout>
